# tessera-compiler

./: .gitignore  Cargo.toml  README.md  a.out  array  array.s  array.tes  arrays-argv.ssa  func.s  func.ssa  tes.vim  test.tes
.cargo/: config.toml
.github/workflows/: cargo-bloat.yml  rust.yml
compiler/ast/: Cargo.toml
compiler/ast/src/: expr.rs  lib.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: builder.rs  lib.rs
compiler/context/: Cargo.toml
compiler/context/src/: lib.rs
compiler/diagnostics/: Cargo.toml
compiler/diagnostics/src/errors/: lexer.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: args.rs  main.rs
compiler/import_resolver/: Cargo.toml
compiler/import_resolver/src/: lib.rs
compiler/interner/: Cargo.toml
compiler/interner/src/: interner.rs  lib.rs
compiler/ir_builder/: Cargo.toml
compiler/ir_builder/src/: lib.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: kind.rs  lexer.rs  lib.rs  operator.rs  token.rs  value.rs
compiler/node/: Cargo.toml
compiler/node/src/: lib.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: parser.rs
compiler/symbols/: Cargo.toml
compiler/symbols/src/: globals.rs  lib.rs  symbol.rs  symbol_table.rs
compiler/tsc_std/: Cargo.toml  build.rs
compiler/tsc_std/include/: libc.tes  std.tes
compiler/tsc_std/include/core/: string.tes
compiler/tsc_std/include/math/: float.tes
compiler/tsc_std/src/: lib.rs
compiler/type_solver/: Cargo.toml
compiler/type_solver/src/: lib.rs
examples/: array.tes
examples/fibonnaci/: iterative.tes  recursive.tes
examples/imports/: main.tes  math.tes
examples/imports/algorithms/: fib.tes
examples/loops/: for.tes
