[package]
name = "driver"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap = "4.5.26"
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log.workspace = true
color-eyre.workspace = true
color = "0.2.3"
memmap2 = "0.9.5"
context.workspace = true 
miette = { version = "7.4.0", features = ["fancy", "syntect-highlighter", "derive"] }
diagnostics.workspace = true 
parser.workspace = true 
lexer.workspace = true 
type_solver.workspace = true
codegen.workspace = true
symbols.workspace = true 
